# sansgrid

./: .gitignore  README.md
src/router/: Makefile  Makefile.am  README  configure.ac
src/router/communication/: Makefile  sg_router_server_communication.c  sg_serial.c  sg_tcp.h
src/router/daemon/: Makefile  pi-runtime.c  sansgrid_daemon.c  sansgrid_daemon.h
src/router/dispatch/: Makefile  dispatch.c  dispatch.h
src/router/dt_handlers/: eyeball_handler.c  handlers.c  handlers.h
src/router/payload_handlers/: payload_handlers.c  payload_handlers.h
src/router/router_to_server/: 0x01-eyeballing_ready_to_mate.payload  0x01-generic.payload  config.pl  generate_stub.pl  process_stubs.pl  sansrts.pl  watch_stream.pl
src/router/router_to_server/rdid001-eyeball-not_ready_to_mate/: 0x01-eyeballing_sensor_not_ready_to_mate.payload
src/router/router_to_server/rdid002-mock-no_sensor_key/: 0x01-eyeball-sensor_ready_to_mate.payload  0x07-mock-no_sensor_key.payload
src/router/router_to_server/rdid003-mock-with_sensor_key/: 0x01-eyeball-sensor_ready_to_mate.payload  0x07-mock-sensor_key.payload
src/router/router_to_server/rdid004-peacock-one_io/: 0x01-eyeball-sensor_ready_to_mate.payload  0x07-mock-no_sensor_key.payload  0x0C-peacock-one_io.payload
src/router/router_to_server/rdid007-10-four_sensors/: 001-sensorA-eyeball_with_mate.payload  002-sensorB-eyeball_with_mate.payload  003-sensorA-mock_no_key.payload  004-sensorC-eyeball_with_mate.payload  005-sensorB-mock_no_key.payload  006-sensorA-peacock_one_signal.payload  007-sensorD-eyeball_with_mate.payload  008-sensorD-mock_no_key.payload  009-sensorD-peacock_one_signal.payload  010-sensorC-mock_no_key.payload  011-sensorB-peacock_one_signal.payload  012-sensorC-peacock_one_signal.payload
src/router/router_to_server/rdid012a-mock_no_key-peacock_one_io/: 0x08-mock_no_sensor_key.payload  0x0c-peacock_one_io.payload
src/router/router_to_server/rdid012b-squawk-no_sensor_challenge/: 0x01-eyeball_ready_to_mate.payload  0x15-squawk-no_sensor_challenge.payload  last_data_sent.text
src/router/router_to_server/rdid012c-router-sensor_status_updates/: 0xfd-status_update-offline.payload  0xfd-status_update-online.payload  0xfd-status_update-stale.payload
src/router/router_to_server/rdid012d-chirp-various/: 0x21-chirp-11_frowns.payload  0x21-chirp-12.3_frowns.payload
src/router/router_to_server/rdid013a-mock_with_key-peacock_one_io/: 0x01-eyeball-sensor_ready_to_mate.payload  0x07-mock-with_sensor_key.payload  0x0c-peacock_one_io.payload
src/router/router_to_server/rdid013b-squawk-sensor_challenge/: 0x01-eyeball_ready_to_mate.payload  0x16-squawk-sensor_challenge_coming.payload  0x17-squawk-sensor_challenge.payload  0x1d-squawk-sensor_accepts_challenge.payload
src/router/router_to_server/rdid014a-mock_no_key-peackock-two_io/: 0x01-eyeball_ready_to_mate.payload  0x08-mock_no_sensor_key.payload  0x0c-peacock_two_io.payload
src/router/router_to_server/rdid015a-mock_no_key_peacock_three_io/: 0x01-eyeball_ready_to_mate.payload  0x08-mock_no_sensor_key.payload  0x0c-peacock_io_a_and_b.payload  0x0c-peacock_io_c.payload
src/router/router_to_server/rdid016a-mock_no_key-peacock-five_io/: 0x01-eyeball_ready_to_mate.payload  0x08-mock_no_sensor_key.payload  0x0c-peacock_io_a_and_b.payload  0x0c-peacock_io_c_and_d.payload  0x0c-peacock_io_e.payload
src/router/router_to_server/rdid016d-chirp_various/: 0x21-chirp-an_out_1-2.payload  0x21-chirp-an_out_1-4.payload  0x21-chirp-an_out_1-6.payload  0x21-chirp-an_out_2-10.payload  0x21-chirp-an_out_2-12.payload  0x21-chirp-an_out_2-15.payload  0x21-chirp-an_out_2-86.payload  0x21-chirp-dig_out-0.payload  0x21-chirp-dig_out-1.payload  0x25-chirp-drop.payload
src/router/router_to_server/rdid017a-documentation/: 0x01-eyeball_ready_to_mate.payload  0x08-mock_no_sensor_key.payload  0x0c-peacock_io_a_and_b.payload  0x0c-peacock_io_c_and_d.payload  0x0c-peacock_io_e.payload
src/router/router_to_server/rdid017d-chirps/: 0x21-fluxcap-116LH.payload  0x21-power-1.21GW.payload  0x21-speed-88mph.payload
src/router/routing/: Makefile  routing.c  routing.h
src/router/routing/test/: routing-test.c
src/router/routing_table/: heartbeat.c  heartbeat.h  routing_table.c  routing_table.h
src/router/sansgrid_router/: sansgrid_router.c  sansgrid_router.h
src/router/sansgridrouter/: Doxyfile  Makefile.am  main.c  sansgrid_router.h
src/router/sansgridrouter/communication/: sg_serial_generic.c  sg_serial_rpi.c  sg_tcp.c  sg_tcp.h  sg_tcp_handler.c  spitest-arduino.c
src/router/sansgridrouter/daemon/: sansgrid_daemon.c  sansgrid_daemon.h
src/router/sansgridrouter/dispatch/: dispatch.c  dispatch.h
src/router/sansgridrouter/doc/: sansgrid.conf.example
src/router/sansgridrouter/payload_handlers/: payload_handlers.c  payload_handlers.h
src/router/sansgridrouter/routing_table/: auth_status.c  auth_status.h  heartbeat.c  heartbeat.h  routing_table.c  routing_table.h
src/router/sansgridrouter/test/: tests.c  tests.h
src/router/sansgridrouter_server/: Makefile.am  main.c
src/router/sansgridrouter_server/communication/: sg_serial_generic.c  sg_tcp_rpi.c
src/router/sansgridrouter_server/daemon/: sansgrid_daemon.c  sansgrid_daemon.h
src/router/sansgridrouter_server/payload_handlers/: payload_handlers.c  payload_handlers.h
src/router/sansgridrouter_server/routing_table/: heartbeat.h  routing_table.c  routing_table.h
src/router/sansgridrouter_server/test/: tests.c  tests.h
src/router/spi/: payloads.h
src/router/synchronous_queue/: Makefile  sync_queue.c
src/router/synchronous_queue/test/: sync_queue_main.c
src/router/test/: Makefile  dispatch-advanced.c  routing-basic-test.c  routing-test.c  sync_queue_main.c  test-core.c  tests.c  tests.h
src/router/test/communication/: sg-communication-stubs.c  sg-serial-stubs.c  sg-serial-test.c  sg-tcp-stubs.c  sg_communication_stubs.c  sg_communication_stubs.h
src/router/test/dispatch/: Makefile  dispatch-advanced.c  dispatch-basic.c  dispatch_advanced.c
src/router/test/payloads/: payload-dt-eyeball.c  payload-dt-mock.c  payload-dt-peck.c  (+22 more)
(+132 files in other folders)
